--- a/markdown/自我介绍.md
+++ b/markdown/自我介绍.md
@@ -1,9 +1,11 @@
 # 自我介绍	
 
-面试官您好，我叫廖泽宇，是四川师范大学软件工程专业大三的学生，目前是我校计算机协会前端组负责人。
+面试官您好，我叫廖泽宇，是四川师范大学软件工程专业大三的学生。
 
-我从大二的暑假开始接触前端，通过网上自学和平时的积累来学习前端知识，并在之后的时间中不断与同学交流技术，对社团其他成员进行前端的培训指导。
+我从大二的暑假开始接触前端，通过网上资料，翻阅书本，与同学交流和做项目来学习积累前端知识。曾在计算机科学协会指导其他成员进行前端的学习。
 
 在学校完成过一些项目，主要职责是前端开发，在学校举办的技能大赛中，我搭建了打字网页，登录网页，有团队开发多人协同的经历；在比赛方面也获得过一些奖。
 
-我希望之后有机会通过实习进一步提升自己的前端能力，与公司部门共同发展。
+我是六月中旬在腾讯CSIG部门实习，这一个多月中完成了微搭低码企业控制台门户的登录鉴权，现已发布现网。
+
+我希望通过本次面试展示自己，加入公司部门，与公司部门共同发展。
