--- a/markdown/同源策略与跨域.md
+++ b/markdown/同源策略与跨域.md
@@ -90,3 +90,7 @@ CORS是一个W3C标准，全称是"跨域资源共享"（Cross-origin resource s
 
 ​	同源策略、跨域解决方案（博客园）https://www.cnblogs.com/rockmadman/p/6836834.html
 
+
+
+再学习：思否 [前端常见跨域解决方案（全）](https://segmentfault.com/a/1190000011145364)
+
