CSS相关及其动画

--- a/markdown/变量提升.md
+++ b/markdown/变量提升.md
@@ -35,7 +35,7 @@ sayHi();
 - D: `undefined` 和 `ReferenceError`
 
 ```
-参考答案
+参考答案 D
 ```
 
 在函数中，我们首先使用`var`关键字声明了`name`变量，这意味着变量在创建阶段会被提升（`JavaScript`会在创建变量创建阶段为其分配内存空间），默认值为`undefined`。直到我们实际执行到使用该变量的行，我们还没有为`name`变量赋值，所以它仍然保持`undefined`的值。
