MarkDown内容修改补充/MVC,MVP,MVVM设计模式/Vue响应式原理补充

--- a/markdown/浏览器相关知识.md
+++ b/markdown/浏览器相关知识.md
@@ -72,7 +72,7 @@ JS阻塞页面加载 WebWorker与SharedWorker
 
 #### 浏览器渲染流程
 
-浏览器器内核拿到内容后，渲染大概可以划分成以下几个步骤：
+浏览器内核拿到内容后，渲染大概可以划分成以下几个步骤：
 
 1. 解析html建立dom树
 2. 解析css构建render树（将CSS代码解析成树形的数据结构，然后结合DOM合并成render树）
