自我介绍修改/秋招面经

--- a/documents/秋招面经.md
+++ b/documents/秋招面经.md
@@ -20,3 +20,23 @@
 16. CDN给用户分配最合适服务器的算法有了解过吗
 17. 数组的扁平化，至少写两种方法
 
+
+
+### 腾讯
+
+#### 0818 成都天美 一面
+
+1. 自我介绍
+2. 实习期间做了什么？最近在做什么？实习中你遇到的最大的困难是什么？怎么解决的？
+3. 为什么不想在那边转正？如果只是想在成都的话，为什么不选成都的云开发？
+4. 未来规划是什么？指专攻具体的某一个方向，不要说得太广泛
+5. 通过这次实习加深了对于Git的了解，具体讲讲？
+6. git rebase和git merge的不同，深入讲一下
+7. 两道算法，一道是手写快排（应该），一道是合并K个有序链表，共半个小时，不管写没写完都不允许再写
+8. 进程和线程的区别
+9. 进程间通信的方式
+10. CPU调用进程的方式
+11. 列出HTTP报文中常用的请求头
+12. 场景题：断点续传如何实现？这里包括断点上传和断点下载
+13. HTTPS与HTTP的区别，HTTPS的三次握手，对对称加密和非对称加密的理解，这里问的有点多，有点深，光了解握手过程是不行的
+14. 反问环节
