--- a/documents/自我介绍.md
+++ b/documents/自我介绍.md
@@ -1,11 +1,11 @@
 # 自我介绍	
 
-面试官您好，我叫廖泽宇，是四川师范大学软件工程专业大三的学生。
+面试官您好，我叫廖泽宇，是四川师范大学软件工程专业准大四的学生。
 
-我从大二的暑假开始接触前端，通过网上资料，翻阅书本，与同学交流和做项目来学习积累前端知识。曾在计算机科学协会指导其他成员进行前端的学习。
+我从大二的暑假开始接触前端，通过阅读网上博客，翻阅书本，与同学交流和开发项目来积累前端知识。曾在计算机科学协会指导其他成员进行前端的学习。
 
-在学校完成过一些项目，主要职责是前端开发，在学校举办的技能大赛中，我搭建了打字网页，登录网页，有团队开发多人协同的经历；在比赛方面也获得过一些奖。
+在学校完成过一些项目，主要职责是前端开发，在学校举办的技能大赛中，我搭建了打字网页，登录网页，有团队开发多人协同的经历；在学习和比赛方面也获得过一些奖。
 
-我是六月中旬在腾讯CSIG部门实习，这一个多月中完成了微搭低码企业控制台门户的登录鉴权，现已发布现网。
+我是六月中旬开始在腾讯CSIG云产品开发部门实习，这两个多月中完成了微搭低码企业控制台门户的用户鉴权，及其优化，现已发布现网，随后的时间在对项目进行优化，迭代更新，还完成了组件库中表单的适配。
 
-我希望通过本次面试展示自己，加入公司部门，与公司部门共同发展。
+我希望通过本次面试展示自己。
