面经补充/知识点补充

--- a/documents/秋招面经.md
+++ b/documents/秋招面经.md
@@ -10,7 +10,7 @@
 6. 讲整个组做的产品，产品亮点功能等
 7. 有深入学习Node吗？讲一下Node事件循环和JS事件循环的区别
 8. Hooks和component的优势比（区别）在哪
-9. 用function hook 写一个弹窗组件？没听清，重点是封装一个hook？
+9. 用function hook 写个弹窗组件？没听清，重点是封装一个hook？
 10. 如何进行盒子水平垂直居中？
 11. 给盒子加上flex属性，内部项目会扩展吗？500px的盒子 600px的项目
 12. 跨域有遇到过吗？怎么解决
@@ -19,6 +19,36 @@
 15. CDN有用过吗？讲一下CDN作用，工作流程
 16. CDN给用户分配最合适服务器的算法有了解过吗
 17. 数组的扁平化，至少写两种方法
+
+
+
+#### 0826 成都飞书 一面
+
+1. 自我介绍
+2. 做的项目中哪一个印象最深？为什么？（详细讲一下实习的项目）
+3. 装饰器相关知识，写一个装饰器
+4. 项目的测试
+5. 项目中的角色权限设计
+6. 项目中的一些细节，比如token等
+7. React用的类组件还是函数组件，讲一些常用的hook函数
+8. 为什么说函数式组件的hook不能放在if，for里面？
+9. Redux用过吗？（然而我这个项目用的CONCENT）
+10. React的事件属性相对于原生的是进行了一些封装的，请问具体封装了什么？
+11. 设计一个input框，每输入一个字符，就进行一次判断（考察原生的事件，比如onchange）
+12. React中的key有什么用
+13. useCallback的使用，如果useCallback的依赖容易变更引起的性能问题（useCallback相关的性能问题及引出useRef）
+14. useRef和useState的区别
+15. CSS的position属性
+16. 一个盒子的padding，margin取值的百分比是相对于什么来的？padding-height和padding-left是相对于高度和宽度吗？
+17. display:none和visibility: hidden的区别
+18. display:none的标签元素能被JS所获取吗
+19. Vue和React的区别
+20. MVVM与React，Vue
+21. MVC，MVP与MVVM的区别
+22. 算法题：柯里化
+23. 反问环节
+
+
 
 
 
@@ -40,3 +70,72 @@
 12. 场景题：断点续传如何实现？这里包括断点上传和断点下载
 13. HTTPS与HTTP的区别，HTTPS的三次握手，对对称加密和非对称加密的理解，这里问的有点多，有点深，光了解握手过程是不行的
 14. 反问环节
+
+
+
+#### 0825 成都企微 一面
+
+1. 自我介绍
+2. 讲一下表单组件库（产品）
+3. 代码题：节流，扁平数组变成树，数组分段相等
+4. 为什么不转正想留在成都
+5. 讲一下学校报名网站，虽然没什么可以讲的
+6. 讲一下实习的项目
+7. cookie，session，storage的区别
+8. 如何设计集群每台服务器共享session？如何稳定？
+9. CSRF攻击
+10. token如何生成的？有哪些信息
+11. 通过原生的XML封装AJAX（大概）
+12. flex-grow,flex-shrink
+13. 文件断点续传 ，大文件怎么办（涉及浏览器的work 线程）
+14. 宏任务与微任务，JS事件循环
+15. 实习遇到的困难
+16. 说一些常见的设计模式，有没有具体使用过
+17. 反问环节
+
+
+
+### 美团
+
+#### 0902 成都一面
+
+1. Get 和 POST 请求的区别
+2. Restful
+3. TCP 和 UDP 的区别
+4. 面向对象的三个特性，五个原则？
+5. 简述 OSI 网路模型（7层/4层网络协议）
+6. 行内元素与块级元素的区别？各列举5个
+7. CSS 如何阻塞文档解析？
+8. 介绍一下标准的 CSS 的盒子模型？IE 盒模型呢？
+9. CSS选择器有哪些类型？如何计算优先级？
+10. margin 重叠问题的理解
+11. 对 BFC 规范（块级格式化上下文：block formatting context）的理解？
+12. position 的值 relative 和 absolute 定位原点是？
+13. 什么是变量提升？let 和 const 的注意点？
+14. null 和 undefined 的区别？
+15. typeof 是否正确判断类型? instanceof 呢？
+16. == 和 === 有什么区别？
+17. JavaScript 原型，原型链？ 有什么特点？
+18. async 和 defer 的作用是什么？有什么区别？
+19. 什么是浏览器的同源政策？
+20. 如何解决跨域问题？
+21. React 生命周期
+22. Redux 遵循的三个原则是什么？
+23. 经常使用的 git 命令？
+24. 用3升，5升杯子怎么量出4升水？
+25. 小明和小红玩一个游戏，有 20 个黑球，1 个红球，每人选一次球，每一次必须选 1 到 4 个球（不能不选），必须把所有的黑球都选完后才能选红球（最后只剩 1 个红球时才能选红球，即使只是剩 1 黑 1 红时也只能先选 1 黑，剩下的红球由另一个人选）。小明先选，小明第一次必须选多少个黑球才能保证小明选到红球?
+26. 谈实习，谈实习项目
+
+
+
+| 公司     | 投递状态 |
+| -------- | -------- |
+| 腾讯     | 等捞     |
+| 字节     | 已投     |
+| 美团     | 已凉     |
+| 网易     | 已投     |
+| 网易雷火 | 已投     |
+| 阿里     | 正在问   |
+| 京东     | 已投     |
+| 百度     | 已投     |
+
