--- a/documents/同源策略与跨域.md
+++ b/documents/同源策略与跨域.md
@@ -2,7 +2,7 @@
 
 ## 浏览器的同源策略
 
-**同源策略**是一个重要的安全策略，它用于限制一个origin的文档或者它加载的脚本如何能与另一个源的资源进行交互。它能帮助阻隔恶意文档，减少可能被攻击的媒介
+**同源策略**是一个重要的安全策略，它用于限制一个源（origin）的文档或者它加载的脚本如何能与另一个源的资源进行交互。它能帮助阻隔恶意文档，减少可能被攻击的媒介
 
 ## 同源的定义
 
