面经补充/知识点补充

--- a/documents/不同类型的比较规则.md
+++ b/documents/不同类型的比较规则.md
@@ -22,7 +22,9 @@
 
 五、null, undefined不会进行类型转换, 但它们俩相等
 
-
+> 虽然null和undefined的toBoolean都是false，但null == false 为false，undefined == false为false
+>
+> 且nu l l == undefined
 
 例题：
 
