--- a/documents/变量提升.md
+++ b/documents/变量提升.md
@@ -47,7 +47,7 @@ sayHi();
 ```js
 let name = 'ConardLi'
 {
-  console.log(name) // Uncaught ReferenceError: name is not defined
+  console.log(name) // Uncaught ReferenceError: Cannot access 'name' before initialization
   let name = 'code秘密花园'
 }
 ```
