--- a/documents/同源策略与跨域.md
+++ b/documents/同源策略与跨域.md
@@ -52,8 +52,26 @@ domain 属性可返回下载当前文档的服务器域名。
 
 **2.JSONP跨域**
 
+jsonp跨域请求的一个关键就在于：
+
+**服务端要在返回的数据外层包裹一个客户端已经定义好的函数**
+
+原生JS实现JSONP的步骤
+
+客户端
+
+1. 定义获取数据后调用的回调函数
+2. 动态生成对服务端JS进行引用的代码
+   - 设置`url`为提供`jsonp`服务的`url`地址，并在该`url`中设置相关`callback`参数
+   - 创建`script`标签，并设置其`src`属性
+   - 把`script`标签加入`head`，此时调用开始。
+
+服务端
+
+将客户端发送的`callback`参数作为函数名来包裹住`JSON`数据，返回数据至客户端。
+
 采用jsonp跨域也存在问题：
- 1.使用这种方法，只要是个网站都可以拿到b.com里的数据，存在安全性问题。需要网站双方商议基础token的身份验证，这里不详述。
+1.使用这种方法，只要是个网站都可以拿到b.com里的数据，存在安全性问题。需要网站双方商议基础token的身份验证，这里不详述。
 2.只能是GET，不能POST。
 3.可能被注入恶意代码，篡改页面内容，可以采用字符串过滤来规避此问题。
 
