--- a/documents/秋招面经.md
+++ b/documents/秋招面经.md
@@ -85,7 +85,7 @@
 8. 如何设计集群每台服务器共享session？如何稳定？
 9. CSRF攻击
 10. token如何生成的？有哪些信息
-11. 通过原生的XML封装AJAX（大概）
+11. 通过原生的XHR封装AJAX（大概）
 12. flex-grow,flex-shrink
 13. 文件断点续传 ，大文件怎么办（涉及浏览器的work 线程）
 14. 宏任务与微任务，JS事件循环
@@ -125,6 +125,33 @@
 24. 用3升，5升杯子怎么量出4升水？
 25. 小明和小红玩一个游戏，有 20 个黑球，1 个红球，每人选一次球，每一次必须选 1 到 4 个球（不能不选），必须把所有的黑球都选完后才能选红球（最后只剩 1 个红球时才能选红球，即使只是剩 1 黑 1 红时也只能先选 1 黑，剩下的红球由另一个人选）。小明先选，小明第一次必须选多少个黑球才能保证小明选到红球?
 26. 谈实习，谈实习项目
+
+
+
+### 网易
+
+#### 0927 杭州网易云 一面
+
+1. 自我介绍
+2. 介绍自己项目经历中比较难，印象比较深的点
+3. 本地存储相关知识
+4. 前端控制cookie相关知识，提高cookie安全性的方法
+5. token如何生成的
+6. http中head标签里最常见的标签有哪些，有什么用
+7. 为什么JS资源不放入head标签里？考察浏览器解析过程及引起阻塞的原因
+8. 如何防止JS资源阻塞Http解析？
+9. 有做过移动端的适配吗？有哪些方案？
+10. 水平垂直居中的实现方案有哪些？详细说一下
+11. flex:1的含义
+12. flex-basis单独了解过吗
+13. 用过CSS3的新特性吗？讲一下（关于模糊滤镜filter使用过吗？好像存在问题）
+14. new关键词了解过吗
+15. 闭包了解过吗？闭包的底层原理
+16. 用过ES6的新特性吗？讲一下（Promise和Class 这两点一定要讲）
+17. Promise的三个状态？状态如何改变？
+18. 一道JS打印题，涉及JS事件循环，同步与异步
+19. 算法：有效的括号
+20. 反问
 
 
 
