一些知识点的补充

--- a/documents/算法与数据结构.md
+++ b/documents/算法与数据结构.md
@@ -14,9 +14,43 @@
 
 堆只是优先队列实现的一种方式，优先队列还有其他很多实现方式
 
+JS构建堆排序
+
+```javascript
+   //大顶堆
+   function buildMaxHeap(len, nums){
+        for(let i = Math.floor(len / 2) - 1;i >= 0; i--){
+            maxHeap(i, nums, len);
+        }
+    }
+
+    function maxHeap(target, nums, len){
+        let left = target * 2 + 1;
+        let right = target * 2 + 2;
+        let record = target;
+        if(left < len && nums[left] > nums[target]){
+            target = left;
+        }
+        if(right < len && nums[right] > nums[target]){
+            target = right;
+        }
+        if(target !== record){
+            swap(target, record, nums);
+            maxHeap(target, nums, len);
+        }
+    }
+
+    function swap(i, j, nums){
+        let temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+```
+
 参考文章
 
 - [图解排序算法(三)之堆排序](https://www.cnblogs.com/chengxiao/p/6129630.html)
+- [力扣：数组中第K大的元素](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/)
 - [堆排序（完全二叉树）最后一个非叶子节点的序号是n/2-1的原因](https://www.cnblogs.com/malw/p/10542557.html)
 
 
@@ -45,3 +79,13 @@
 #### 单调栈
 
 一句话解释单调栈，就是一个栈，里面的元素的大小按照他们所在栈内的位置，满足一定的单调性。
+
+
+
+待看：
+
+字典树
+
+红黑树
+
+力扣 https://leetcode-cn.com/problems/shopping-offers/
