更新主观问题

--- a/documents/自我介绍及一些主观问题.md
+++ b/documents/自我介绍及一些主观问题.md
@@ -1,10 +1,10 @@
 # 自我介绍	
 
-面试官您好，我叫廖泽宇，是四川师范大学软件工程专业大四的学生。
+面试官您好，我叫廖泽宇，是今年六月份从四川师范大学软件工程专业毕业的的应届生。
 
-我从大二的暑假开始接触前端，通过阅读网上博客，翻阅书本，与同学交流和开发项目来积累前端知识。
+我从两年前开始接触前端，通过阅读网上博客，翻阅书本，与同学交流和开发项目来积累前端知识。
 
-在学校完成过一些项目，主要职责是前端开发，在学校举办的技能大赛中，我搭建了打字网页，报名网页；在学习和比赛方面也获得过一些奖。
+在学校完成过一些项目，主要职责是前端开发，在学校举办的技能大赛中，我搭建了打字网页，报名网页；与同学组成小组完成大学英语学习平台；在学习和比赛方面也获得过一些奖。
 
 我是六月份开始在 腾讯CSIG 云产品开发部门实习，这两个多月中完成了 微搭 企业控制台 的 用户鉴权，现已发布现网，随后的时间在对项目进行优化，迭代更新，后完成了组件库中表单的适配。
 
